--- a/env.example
+++ b/env.example
@@ -2,5 +2,5 @@ MQTT_BROKER=broker.emqx.io
 MQTT_PORT=1883
 MQTT_USERNAME=
 MQTT_PASSWORD=
-MQTT_BASE_TOPIC=cursoIoT/<tu_equipo>
+MQTT_BASE_TOPIC=cursoIoT/MacBook Pro de Daniel
 PUBLISH_INTERVAL_SEC=1.0
